force-app/main/default/objects/Job_Application_Contact__c/Job_Application_Contact__c.object-meta.xml
<CustomObject>
    <label>Job Application Contact</label>
    <nameField>
        <displayFormat>JAC-{0000}</displayFormat>
        <label>Job Application Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Application Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>