force-app/main/default/objects/Job_Application_Contact__c/fields/Full_Name_Fx_Txt__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Fx_Txt__c</fullName>
    <formula>Contact_Id__r.FirstName + &apos; &apos; + Contact_Id__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>