force-app/main/default/objects/Job_Application_Contact__c/fields/Role_Pckl__c.field-meta.xml
<CustomField>
    <fullName>Role_Pckl__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>HR Member</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>